...
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_two"
        android:background="@color/colorBlack"/>

    <FrameLayout
        android:id="@+id/steps_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_zero"
        android:layout_weight="1"/>

</LinearLayout>

