<resources>
    <string name="app_name">Baking App</string>
    <string name="menu_ingredients">Ingredients</string>
    <string name="menu_steps">Steps</string>
    <string name="next_step">Next Step</string>
    <string name="previous_step">Previous Step</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="step_text">Step:</string>
    <string name="ingredient_tag">Ingredients</string>
    <string name="steps_tag">Steps</string>
    <string name="recipe_serving_text">Servings:</string>
    <string name="recipe_tag">Recipe</string>
    <string name="recipe_detail_tag">Recipe Detail</string>
</resources>
